# EchoScript

./: .gitignore  .pre-commit-config.yaml  README.md  babel.cfg  echoscript.spec  pyproject.toml
app/: gui_main.py  main.py
app/adapters/: export.py  local_file.py  youtube.py
app/controllers/: transcription_controller.py
app/core/: config.py  localization.py  models.py  utils.py
app/locales/: .gitkeep
app/locales/en_US/LC_MESSAGES/: messages.po
app/locales/ru_RU/LC_MESSAGES/: messages.po
app/services/: model_manager.py  realtime_transcription.py  transcription.py
installer/: installer.iss
tests/: test_main_e2e.py
tests/adapters/: test_export.py  test_local_file.py  test_youtube.py
tests/controllers/: test_transcription_controller.py
tests/core/: test_config.py  test_localization.py  test_utils.py
tests/services/: test_model_manager.py  test_realtime_transcription.py  test_transcription.py
